# dados

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MIGRACAO_REGIOES_INTEGRACAO.md  README.md  REFACTORING.md  converters.ipynb  docker-compose.yml  logica_tratamento.md  manual_estilo.md  pyproject.toml  todo.md
.github/workflows/: pre-commit.yml
comparacao_benchmark/: RELATORIO_comparacao.md
dados/: dicionarios_institucionais.py
dados/br_me_comex_stat/: elt.py
dados/export/: comparar_benchmark.py  dump_gold_l1.py  dump_gold_l2.py  models.py
dados/silver/: padronizacao_produtos.py  utils.py
dados/utils/: agricultural_conversions.py  logging.py  paths.py  postgres_interactions.py  pydantic_postgres.py
etl/br_csalpha_diretorios_brasil/: cnae_2.py  nomenclatura_comum_mercosul.py  prodlist_industria.py  prodlist_pesca.py
etl/br_ibge_censo_agro/: 2006_tbl_1909.py  2006_tbl_1931.py  2006_tbl_2233.py  2006_tbl_2237.py  2006_tbl_2518.py  2006_tbl_2782.py  2017_tbl_6886.py  2017_tbl_6898.py  2017_tbl_6899.py  2017_tbl_6949.py  2017_tbl_6955.py  2017_tbl_6957.py  utils.py
etl/br_ibge_pac/: tbl_1407.py
etl/br_ibge_pam/: lavoura_permanente.py  lavoura_temporaria.py  lavoura_temporaria_permanente.py  utils.py
etl/br_ibge_pia/: tbl_1849.py
postgres/: Dockerfile  custom-entrypoint.sh
scripts/: last_update_report.py  last_update_report.sh  run_all_golds.sh  run_all_raws.sh  run_all_silvers.sh
silver/: utils.py
tests/: README_auditoria_forecast_renda.md  test_coefficient_identity.py  test_cost_consumption_values.py  test_export_coefficients.py  test_gold_export_l2.py  test_pydantic_metadata.py  test_pydantic_postgres.py  test_renda_forecast_pipeline.py
(+270 files in other folders)
