[tool.poetry]
name = "dados"
version = "0.1.0"
description = ""
authors = ["folhesgabriel <pisagabriel09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
basedosdados = {extras = ["all"], version = "^2.0.0"}
pydantic = "^2.10.6"
dotenv = "^0.9.9"
openpyxl = "^3.1.5"
pyodbc = "^5.2.0"
psycopg2-binary = "^2.9.10"
aiohttp = "^3.11.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
