[project]
name = "dados"
version = "0.1.0"
description = ""
authors = [{ name = "folhesgabriel", email = "pisagabriel09@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.2.3",
    "basedosdados[all]>=2.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
    "pyodbc>=5.2.0",
    "psycopg2-binary>=2.9.10",
    "aiohttp>=3.11.14",
    "xlrd>=2.0.1",
    "loguru>=0.7.2",
    "matplotlib>=3.10.9",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dados"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
